tests/invalid_inputs/sema/void_ptr_plus.cpp
// test that void pointer cannot be added to

void f() {
	void *p;
	p + 1;
}
